# io-adapters

./: Cargo.toml  README.md  api.golden
.github/workflows/: cid.yml
src/: lib.rs
src/adapters/: fmt_write.rs  hasher.rs  mod.rs
