[package]
name = "io-adapters"
version = "0.1.0"
authors = ["Alex Saveau <saveau.alexandre@gmail.com>"]
edition = "2021"
rust-version = "1.65"
description = "Adapters to convert between different writable APIs."
repository = "https://github.com/SUPERCILEX/io-adapters"
keywords = ["io", "adapter"]
categories = ["rust-patterns", "encoding", "data-structures"]
license = "Apache-2.0"

[dev-dependencies]
supercilex-tests = { version = "0.4.2", default-features = false, features = ["api"] }
